--- a/package.json
+++ b/package.json
@@ -7,20 +7,30 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "flowbite-react patch"
+    "postinstall": "flowbite-react patch",
+    "export": "next export"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@mui/material": "^7.2.0",
+    "@react-three/drei": "^10.3.0",
+    "@react-three/fiber": "^9.1.2",
+    "fbx-parser": "^2.1.3",
     "flowbite-react": "^0.11.8",
+    "ldrs": "^1.1.7",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "tailwind-scrollbar": "^4.0.2",
+    "three": "^0.177.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/three": "^0.177.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
